overflow-fix Fav

--- a/Lecker/WebContent/css/style.css
+++ b/Lecker/WebContent/css/style.css
@@ -532,6 +532,8 @@ div.favs {
 	text-align: center;
 	position: relative;
 	top: 75px;
+	height: 200px;
+	overflow: auto;
 }
 
 div.favs a {
